--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "devDependencies": {
     "sass": "^1.80.3",
     "vite": "^5.4.8"
+  },
+  "build": {
+    "commonjsOptions": {
+      "transformMixedEsModules": true
+    }
   }
 }
